overflow problem solve

--- a/Shamim/style.css
+++ b/Shamim/style.css
@@ -325,7 +325,7 @@ background-color:white;
     line-height: 22px;
     color: black;
     display: flex;
-    margin-top: -30px;
+    margin-top: -50px;
     justify-content: center;
     align-items: center;
     
@@ -375,7 +375,7 @@ background-color:white;
     border-radius: 5px;
     transform: skew(-20deg);
     cursor: pointer;
-    margin-top: -10px;
+    margin-top: -40px;
     margin-left: 50px;
 }
 .icon1 img{
@@ -440,7 +440,7 @@ background-color:white;
     font-size: 10px;
     line-height: 18px;
     margin-left: 30px;
-    margin-top: 30px;
+    margin-top: 20px;
     gap: 10px;
  }
  .Horizontalline hr{
